# atlas_shared

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
contracts/: ADAPTIVE_CLASSIFIER_SUBSYSTEM_CONTRACT_2026-04-18.md  AG_RELEVANCE_ADJUDICATOR_CONTRACT_2026-04-07.md  ATLAS_SHARED_SCOPE_CONTRACT_2026-04-07.md  LITERATURE_BODY_QUALITY_CONTRACT_2026-04-23.md  PANEL_TOPIC_EVIDENCE_CONTRACT_2026-04-17.md  PAPER_QUALITY_FINGERPRINT_CONTRACT_2026-04-23.md  PRE_EXTRACTION_INTAKE_CONTRACT_2026-04-17.md  QUESTION_CONSTITUTION_BANK_CONTRACT_2026-04-07.md
docs/: AG_WRAPPER_COMMAND_SPEC_2026-04-08.md  NON_API_ADJUDICATOR_OPTIONS_2026-04-07.md  QUESTION_CONSTITUTION_LLM_WORKFLOW_2026-04-07.md  REVERSE_BUNDLE_ROUTING_2026-04-07.md
docs/panels/: SQ-001_ATTENTION_RESTORATION_CORE_PANEL.md  SQ-002_ART_FASCINATION_MECHANISM_PANEL.md  SQ-003_ART_BUILT_ENVIRONMENT_PANEL.md  SQ-004_STRESS_RECOVERY_PHYSIOLOGY_PANEL.md  SQ-005_SAFETY_SIGNALLING_SAVANNA_PANEL.md  SQ-006_ART_VS_SRT_CONFOUND_PANEL.md  SQ-007_BIOPHILIA_INNATE_VS_LEARNED_PANEL.md  SQ-008_BIOPHILIC_DESIGN_OFFICE_PANEL.md  SQ-009_SHINRIN_YOKU_GENERALIZABILITY_PANEL.md  SQ-010_FRACTAL_DIMENSION_OPTIMAL_PANEL.md  SQ-011_FRACTAL_MECHANISM_DISPUTE_PANEL.md  SQ-012_HOSPITAL_NATURE_VIEW_PANEL.md  SQ-013_VIRTUAL_NATURE_VIEWS_PANEL.md  SQ-014_NATURE_SOUNDS_STRESS_PANEL.md  (+17 more)
tests/: conftest.py  test_bundle_router.py  test_claim_strengths.py  test_classifier_system.py  test_cli_adjudicator.py  test_intake.py  test_literature_body.py  test_paper_quality_dataclasses.py  test_relevance.py  test_topic_bank.py  test_worker_loop.py
(+21 files in other folders)
