[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-shared"
version = "0.1.0"
description = "Shared contracts and reusable decision logic for Atlas repos."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "David Kirsh + Codex" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atlas_shared = ["schemas/*.json", "data/*.json"]
